@@ -1,89 +1,0 @@
-name: cygwin
-
-on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
-  pull_request:
-
-env:
-  PERL5LIB: /cygdrive/c/cx/lib/perl5
-  PERL_LOCAL_LIB_ROOT: /cygdrive/cx
-  PERL_MB_OPT: --install_base /cygdrive/c/cx
-  PERL_MM_OPT: INSTALL_BASE=/cygdrive/c/cx
-  ALIEN_BUILD_PLUGIN_PKGCONFIG_COMMANDLINE_TEST: 1 # Test Alien::Build::Plugin::PkgConfig::CommandLine
-  CYGWIN_NOWINPATH: 1
-
-jobs:
-  perl:
-
-    runs-on: windows-latest
-
-    strategy:
-      fail-fast: false
-
-    defaults:
-      run:
-        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
-
-    steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-        shell: powershell
-
-      - uses: actions/checkout@v2
-
-      - name: Set up Cygwin
-        uses: egor-tensin/setup-cygwin@v3
-        with:
-          platform: x64
-          packages: make perl gcc-core gcc-g++ pkg-config libcrypt-devel libssl-devel git libffi-devel libarchive-devel
-
-      - name: perl -V
-        run: |
-          perl -V
-          gcc --version
-
-      - name: Prepare for cache
-        run: |
-          perl -V > perlversion.txt
-          gcc --version >> perlversion.txt
-          ls perlversion.txt
-
-      - name: Cache CPAN modules
-        uses: actions/cache@v1
-        with:
-          path: c:\cx
-          key: ${{ runner.os }}-build-cygwin-${{ hashFiles('perlversion.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-build-cygwin-${{ hashFiles('perlversion.txt') }}
-
-      - name: Install Static Dependencies
-        run: |
-          export PATH="/cygdrive/c/cx/bin:$PATH"
-          cd $( cygpath -u $GITHUB_WORKSPACE )
-          yes | cpan App::cpanminus || true
-          cpanm -n Dist::Zilla
-          perl -S dzil authordeps --missing | perl -S cpanm -n
-          perl -S dzil listdeps --missing   | perl -S cpanm -n
-
-      - name: Install Dynamic Dependencies
-        run: |
-          export PATH="/cygdrive/c/cx/bin:$PATH"
-          cd $( cygpath -u $GITHUB_WORKSPACE )
-          perl -S dzil run --no-build 'perl -S cpanm --installdeps .'
-
-      - name: Run Tests
-        run: |
-          export PATH="/cygdrive/c/cx/bin:$PATH"
-          cd $( cygpath -u $GITHUB_WORKSPACE )
-          perl -S dzil test -v
-
-      - name: CPAN log
-        if: ${{ failure() }}
-        run: |
-          cat ~/.cpanm/latest-build/build.log
